# nk-transformers

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt  run.py
src/: __init__.py  benchmarks.py  config.py  evaluate.py  model.py  plots.py  simulator.py  train.py  visualisation.py
tests/: __init__.py  test_benchmarks.py  test_config.py  test_model.py  test_simulator.py  test_train.py
