[project]
name = "nk-transformers"
version = "0.1.0"
description = "NK Transformer replication for Lucas Critique study"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20"]
ignore = ["E501", "N818", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"